--- a/www/admin.html
+++ b/www/admin.html
@@ -7,6 +7,7 @@
   <style>
     iframe { width: 100%; height: 300px; border: 1px solid #ccc; margin-top: 10px; }
     .user-box { border: 1px solid #ccc; padding: 10px; margin: 10px 0; background: #fff; border-radius: 6px; }
+    .acciones { margin-top: 20px; }
   </style>
 </head>
 <body>
@@ -29,119 +30,139 @@
     <h2>📄 Egresados registrados</h2>
 
     <div style="display: flex; gap: 20px; flex-wrap: wrap;">
-    <div>
+      <div>
         <label for="vacanteFiltro"><strong>Filtrar por vacante:</strong></label><br>
         <select id="vacanteFiltro" required>
-        <option value="">Seleccione una vacante</option>
+          <option value="">Seleccione una vacante</option>
         </select>
-    </div>
+      </div>
 
-    <div>
+      <div>
         <label for="buscador"><strong>Buscar por nombre:</strong></label><br>
         <input type="text" id="buscador" placeholder="Ej. Juan Pérez">
+      </div>
     </div>
-    </div>
+
     <br>
+
+    <div style="display: flex; flex-wrap: wrap; gap: 20px;">
+      <div id="usuarios" style="flex: 1; min-width: 300px;"></div>
+
+      <div style="flex: 2; min-width: 400px; padding-left: 20px;">
+        <h3>Vista previa del CV</h3>
+        <iframe id="preview-cv" src=""></iframe>
+      </div>
+    </div>
+
+    <div class="acciones">
+      <button id="descargarZip">📦 Descargar seleccionados (.zip)</button>
+    </div>
   </section>
 
   <script>
     const authHeaders = {
-      "Authorization": "Basic " + btoa("admin:1234") // Ajusta si cambiaste el user/pass
+      "Authorization": "Basic " + btoa("admin:1234") // Ajusta si cambiaste user/pass
     };
 
-    // Crear vacante
-    document.getElementById('vacante-form').addEventListener('submit', async e => {
-      e.preventDefault();
-      const nombre = document.getElementById('vacante-nombre').value;
-      const descripcion = document.getElementById('vacante-desc').value;
+    const formVacante = document.getElementById('vacante-form');
+    if (formVacante) {
+      formVacante.addEventListener('submit', async e => {
+        e.preventDefault();
+        const nombre = document.getElementById('vacante-nombre').value;
+        const descripcion = document.getElementById('vacante-desc').value;
 
-      const res = await fetch('/api/admin/vacantes/create', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          ...authHeaders
-        },
-        body: JSON.stringify({ nombre, descripcion })
+        const res = await fetch('/api/admin/vacantes/create', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            ...authHeaders
+          },
+          body: JSON.stringify({ nombre, descripcion })
+        });
+
+        const data = await res.json();
+        document.getElementById('vacante-status').textContent = data.message || 'Error al crear';
       });
+    }
 
-      const data = await res.json();
-      document.getElementById('vacante-status').textContent = data.message || 'Error al crear';
-    });
+    // 🧠 Mostrar PDF seleccionado
+    function mostrarCV(cvFilename) {
+      document.getElementById('preview-cv').src = `/cvs/${cvFilename}`;
+    }
 
-    // Cargar usuarios
+    // 📦 Descargar ZIP
+    const btnDescarga = document.getElementById('descargarZip');
+    if (btnDescarga) {
+      btnDescarga.addEventListener('click', async () => {
+        const checks = document.querySelectorAll('input[type="checkbox"]:checked');
+        const archivos = Array.from(checks).map(c => c.dataset.cv);
+
+        if (!archivos.length) return alert("Selecciona al menos un CV");
+
+        const res = await fetch('/api/admin/zip', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            ...authHeaders
+          },
+          body: JSON.stringify({ archivos })
+        });
+
+        const blob = await res.blob();
+        const url = window.URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = 'cvs_seleccionados.zip';
+        a.click();
+      });
+    }
+
+    // 📋 Listar y filtrar usuarios
     let todosLosUsuarios = [];
 
-async function cargarUsuarios() {
-  const res = await fetch('/api/admin/usuarios', { headers: authHeaders });
-  todosLosUsuarios = await res.json();
-  renderUsuarios(); // función separada
-}
+    async function cargarUsuarios() {
+      const res = await fetch('/api/admin/usuarios', { headers: authHeaders });
+      todosLosUsuarios = await res.json();
+      renderUsuarios();
+    }
 
-function renderUsuarios() {
-  const contenedor = document.getElementById('usuarios');
-  contenedor.innerHTML = '';
+    function renderUsuarios() {
+      const contenedor = document.getElementById('usuarios');
+      contenedor.innerHTML = '';
 
-  const filtroNombre = document.getElementById('buscador').value.toLowerCase();
-  const filtroVacante = document.getElementById('vacanteFiltro').value;
+      const filtroNombre = document.getElementById('buscador').value.toLowerCase();
+      const filtroVacante = document.getElementById('vacanteFiltro').value;
 
-  const filtrados = todosLosUsuarios.filter(u => {
-    const coincideNombre = u.nombre.toLowerCase().includes(filtroNombre);
-    const coincideVacante = filtroVacante ? u.vacante?._id === filtroVacante : false;
-    return coincideNombre && coincideVacante;
-  });
-
-  filtrados.forEach(user => {
-    const div = document.createElement('div');
-    div.className = 'user-box';
-    div.innerHTML = `
-      <input type="checkbox" data-cv="${user.cv}">
-      <button onclick="mostrarCV('${user.cv}')">👁 Ver CV</button>
-      <strong>${user.nombre}</strong> (${user.edad} años)<br>
-      Vacante: ${user.vacante?.nombre || 'N/A'}<br>
-    `;
-    contenedor.appendChild(div);
-  });
-}
-
-
-function mostrarCV(cvFilename) {
-  document.getElementById('preview-cv').src = `/cvs/${cvFilename}`;
-}
-
-
-    // Descargar seleccionados como zip
-    document.getElementById('descargarZip').addEventListener('click', async () => {
-      const checks = document.querySelectorAll('input[type="checkbox"]:checked');
-      const archivos = Array.from(checks).map(c => c.dataset.cv);
-
-      const res = await fetch('/api/admin/zip', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          ...authHeaders
-        },
-        body: JSON.stringify({ archivos })
+      const filtrados = todosLosUsuarios.filter(u => {
+        const coincideNombre = u.nombre.toLowerCase().includes(filtroNombre);
+        const coincideVacante = filtroVacante ? u.vacante?._id === filtroVacante : false;
+        return coincideNombre && coincideVacante;
       });
 
-      const blob = await res.blob();
-      const url = window.URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'cvs_seleccionados.zip';
-      a.click();
-    });
-    
-    async function cargarVacantesEnFiltro() {
-    const res = await fetch('/api/vacantes');
-    const vacantes = await res.json();
-    const select = document.getElementById('vacanteFiltro');
+      filtrados.forEach(user => {
+        const div = document.createElement('div');
+        div.className = 'user-box';
+        div.innerHTML = `
+          <input type="checkbox" data-cv="${user.cv}">
+          <button onclick="mostrarCV('${user.cv}')">👁 Ver CV</button>
+          <strong>${user.nombre}</strong> (${user.edad} años)<br>
+          Vacante: ${user.vacante?.identificador || 'N/A'} - ${user.vacante?.nombre || 'N/A'}<br>
+        `;
+        contenedor.appendChild(div);
+      });
+    }
 
-    vacantes.forEach(v => {
+    async function cargarVacantesEnFiltro() {
+      const res = await fetch('/api/vacantes');
+      const vacantes = await res.json();
+      const select = document.getElementById('vacanteFiltro');
+
+      vacantes.forEach(v => {
         const option = document.createElement('option');
         option.value = v._id;
-        option.textContent = v.nombre;
+        option.textContent = `${v.identificador} - ${v.nombre}`;
         select.appendChild(option);
-    });
+      });
     }
 
     document.getElementById('vacanteFiltro').addEventListener('change', renderUsuarios);
@@ -149,8 +170,6 @@ function mostrarCV(cvFilename) {
 
     cargarVacantesEnFiltro();
     cargarUsuarios();
-
-
   </script>
 </body>
 </html>
