--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Registro de Usuario</h1>
 
-  <form id="registro-form" enctype="multipart/form-data">
+  <form id="registro-form" method="POST" enctype="multipart/form-data">
     <label>Nombre:</label><br>
     <input type="text" name="nombre" required><br><br>
 
@@ -17,6 +17,40 @@
 
     <label>Correo de contacto:</label><br><br>
     <input type="email" name="correo" required><br><br>
+
+    <label>Número de boleta:</label><br><br>
+    <input type="text" name="boleta" required><br><br>
+
+    <label for="lada">Lada internacional:</label>
+    <select name="lada" id="lada" required>
+      <option value="">Selecciona país</option>
+      <option value="+52">+52 🇲🇽 México</option>
+      <option value="+1">+1 🇺🇸 USA / 🇨🇦 Canadá</option>
+      <option value="+54">+54 🇦🇷 Argentina</option>
+      <option value="+55">+55 🇧🇷 Brasil</option>
+      <option value="+56">+56 🇨🇱 Chile</option>
+      <option value="+57">+57 🇨🇴 Colombia</option>
+      <option value="+58">+58 🇻🇪 Venezuela</option>
+      <option value="+51">+51 🇵🇪 Perú</option>
+      <option value="+591">+591 🇧🇴 Bolivia</option>
+      <option value="+502">+502 🇬🇹 Guatemala</option>
+      <option value="+503">+503 🇸🇻 El Salvador</option>
+      <option value="+504">+504 🇭🇳 Honduras</option>
+      <option value="+505">+505 🇳🇮 Nicaragua</option>
+      <option value="+506">+506 🇨🇷 Costa Rica</option>
+      <option value="+507">+507 🇵🇦 Panamá</option>
+      <option value="+34">+34 🇪🇸 España</option>
+      <option value="+44">+44 🇬🇧 Reino Unido</option>
+      <option value="+33">+33 🇫🇷 Francia</option>
+      <option value="+49">+49 🇩🇪 Alemania</option>
+      <option value="+39">+39 🇮🇹 Italia</option>
+      <option value="+81">+81 🇯🇵 Japón</option>
+      <option value="+86">+86 🇨🇳 China</option>
+      <option value="+91">+91 🇮🇳 India</option>
+    </select>
+
+    <label>Número de contacto:</label><br><br>
+    <input type="tel" name="telefono" pattern="\d{10}" title="Número de teléfono a 10 dígitos" required><br><br>
 
     <label>Escuela de procedencia:</label>
     <select name="escuela" required>
@@ -52,6 +86,11 @@
       <option value="UPIEM">UPIEM</option>
     </select>
 
+    <label>Programa académico:</label><br>
+    <select name="carrera" id="carrera-select" required>
+      <option value="">Seleccione una carrera</option>
+    </select><br><br>
+
     <label>Vacante:</label><br>
     <select name="vacante" id="vacante-select" required>
       <option value="">Seleccione una vacante</option>
@@ -65,6 +104,8 @@
 
   <p id="mensaje"></p>
 
+  <script src="/js/escuelaCarreras.js"></script>
+  <script src="/js/cargarescuelas.js"></script>
   <script>
     async function cargarVacantes() {
       const res = await fetch('/api/vacantes');
@@ -77,61 +118,49 @@
         select.appendChild(option);
       });
     }
-
+  
     window.addEventListener('DOMContentLoaded', cargarVacantes);
-
+  
     const form = document.getElementById('registro-form');
-
+  
     form.addEventListener('submit', async e => {
       e.preventDefault();
-
+  
       const formData = new FormData(form);
-      const fileInput = document.getElementById('cv-file');
-      const file = fileInput.files[0];
-
-      if (!file) {
-        alert("Selecciona un archivo");
-        return;
-      }
-
-      // Validación de tipo MIME
-      if (file.type !== "application/pdf") {
+      const file = formData.get('cv');
+  
+      if (!file || file.type !== "application/pdf") {
         alert("El archivo debe ser un PDF.");
         return;
       }
-
-      // Validación opcional por extensión (extra)
+  
       const ext = file.name.split('.').pop().toLowerCase();
       if (ext !== 'pdf') {
         alert("La extensión del archivo debe ser .pdf");
         return;
       }
-
-
-      const uploadRes = await fetch('/api/users/upload', {
-        method: 'POST',
-        body: formData
-      });
-
-      const uploadData = await uploadRes.json();
-      const cvNombre = uploadData.filename;
-
-      const dataFinal = {
-        nombre: formData.get('nombre'),
-        edad: parseInt(formData.get('edad')),
-        vacante: formData.get('vacante'),
-        cv: cvNombre
-      };
-
-      const saveRes = await fetch('/api/users/create', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(dataFinal)
-      });
-
-      const result = await saveRes.json();
-      document.getElementById('mensaje').textContent = result.message || 'Registrado';
+  
+      try {
+        const res = await fetch('/api/users/create', {
+          method: 'POST',
+          body: formData
+        });
+  
+        const data = await res.json();
+  
+        if (res.ok) {
+          document.getElementById('mensaje').textContent = data.message || 'Registrado con éxito';
+          form.reset();
+        } else {
+          document.getElementById('mensaje').textContent = data.error || 'Error al registrar';
+        }
+      } catch (err) {
+        console.error("❌ Error al enviar el formulario:", err);
+        document.getElementById('mensaje').textContent = 'Error al enviar datos';
+      }
     });
   </script>
+  
+   
 </body>
 </html>
